# TabDPT

./: .gitignore  README.md  benchmark_tabdpt_dynamic.py  benchmark_tabdpt_regression_amd.py  download_official.py  paper_evaluation.py  pyproject.toml  tabdpt1_1.safetensors
dataset/ctr23/: 41021__Moneyball.csv  44956__abalone.csv  44957__airfoil_self_noise.csv  44958__auction_verification.csv  44959__concrete_compressive_strength.csv  44960__energy_efficiency.csv  44962__forest_fires.csv  44963__physiochemical_protein.csv  44964__superconductivity.csv  44965__geographical_origin_of_music.csv  44966__solar_flare.csv  44967__student_performance_por.csv  44969__naval_propulsion_plant.csv  44970__QSAR_fish_toxicity.csv  44971__white_wine.csv  44972__red_wine.csv  44973__grid_stability.csv  44974__video_transcoding.csv  44975__wave_energy.csv  44976__sarcos.csv  44977__california_housing.csv  44978__cpu_activity.csv  44979__diamonds.csv  44980__kin8nm.csv  44981__pumadyn32nh.csv  44983__miami_housing.csv  44984__cps88wages.csv  44987__socmob.csv  44989__kings_county.csv  44990__brazilian_houses.csv  44992__fps_benchmark.csv  44993__health_insurance.csv  44994__cars.csv  45012__fifa.csv  45402__space_ga.csv  manifest.json
dataset/tabarena/: manifest.json
dataset/talent_cls/: manifest.json
dataset/talent_reg/: 1000-Cameras-Dataset.csv  2dplanes.csv  3D_Estimation_using_RSSI_of_WLAN_dataset.csv  Abalone_reg.csv  Ailerons.csv  BNG_mv.csv  (+95 more)
notebooks/: analysis.ipynb
tabdpt_datasets/: dataset.py  openml.py
tests/: cls_example.py  reg_example.py  test_tabdpt_estimator.py
(+369 files in other folders)
