[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "tabdpt"
version = "1.1.12"
description = "TabDPT: Scaling Tabular Foundation Models on Real Data"
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICEN[CS]E*"]
requires-python = ">=3.10"
dependencies = [
    "faiss-cpu>=1.11.0,<1.13.0",
    "huggingface-hub>=0.33.2,<2.0",
    "numpy>=1.25.0,<3.0",
    "omegaconf>=2.1.1,<3.0",
    "safetensors>=0.5.3,<1.0",
    "scikit-learn>=1.4.0,<2.0",
    "scipy>=1.9.0,<2.0",
    "torch>=2.6.0,<3.0",
    "tqdm>=4.38.0,<5.0",
]

[project.optional-dependencies]
reproduce-results = [
    "faiss-cpu==1.11.0",
    "numpy==2.3.0;python_version>='3.11'",
    "omegaconf==2.3.0",
    "scikit-learn==1.7.0",
    "scipy==1.15.3",
    "torch==2.7.1",
    "rliable==1.2.0",
    "pandas==2.3.2",
    "openml==0.15.1",
    "jupyter==1.1.1",
    "tenacity==9.1.2",
    "gdown==5.2.0",
]

[project.urls]
Repository = "https://github.com/layer6ai-labs/TabDPT-inference"
Paper = "https://arxiv.org/abs/2410.18164"
Model = "https://huggingface.co/Layer6/TabDPT"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "rliable>=1.2.0,<2.0",
    "pandas>=2.3.2,<3.0",
    "openml>=0.15.1,<1.0",
    "jupyter>=1.1.1,<2.0",
    "tenacity>=9.1.2,<10.0",
    "gdown>=5.2.0,<6.0",
]
